Add styling for recipies

--- a/index.html
+++ b/index.html
@@ -7,12 +7,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes/grilledCorn.html">Grilled Corn with Cilantro Lime Butter</a></li>
-        <li><a href="recipes/sangria.html">Sangria</a></li>
-        <li><a href="recipes/CapreseSalad.html">Peach and Tomato Caprese Salad</a></li>
-    </ul>
-
+    <!-- <h1>Odin Recipes</h1> -->
+    <main class="parent">
+        <h1>Odin Recipes</h1>
+        <div class="child group1">
+          <div class="grand-child group1">
+            <a href="recipes/grilledCorn.html">Grilled Corn with Cilantro Lime Butter</a>
+          </div>
+        </div>
+        <div class="child group2">
+          <div class="grand-child group2">
+            <a href="recipes/sangria.html">Sangria</a>
+          </div>
+        </div>
+        <div class="child group3">
+          <div class="grand-child group3">
+            <a href="recipes/CapreseSalad.html">Peach and Tomato Caprese Salad</a>
+          </div>
+        </div>
+    </main>
 </body>
 </html>
