--- a/recipes/CapreseSalad.html
+++ b/recipes/CapreseSalad.html
@@ -4,28 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Peach and Tomato Caprese Salad</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Peach and Tomato Caprese Salad</h1>
-    <img src="https://www.allrecipes.com/thmb/fCT4ZRhOaR-7ef8gAXTEM2cnNsk=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/4531443-011ac1b2556f4224b25de664c458ca08.jpg" alt="Peach and Tomato Caprese Salad">
-    <h2>Description :</h2>
-    <p>This peach caprese salad with heirloom tomatoes and fresh mozzarella is topped with a simple balsamic vinaigrette for a fantastic summer appetizer.</p>
-    <h2>Ingredients</h2>
-    <ul>
-        <li>2 tablespoons extra-virgin olive oil</li>
-        <li>1 tablespoon balsamic vinegar</li>
-        <li>1 teaspoon flaked salt, divided</li>
-        <li>2 large heirloom tomatoes, thinly sliced</li>
-        <li>2 ripe peaches - halved, pitted, and sliced into half moons</li>
-        <li>1 (8 ounce) ball fresh mozzarella, thinly sliced</li>
-        <li>6 leaves fresh basil</li>
-    </ul>
-    <br>
-    <br>
-    <h2>Steps:</h2>
-    <ol>
-        <li>Step 1 :<p>Whisk olive oil, balsamic vinegar, and 1 pinch flaked salt together in a bowl until dressing is smooth.</p></li>
-        <li>Step 2 :<p>Alternate tomato slices, peach slices, mozzarella slices, and basil leaves in layers on a platter. Drizzle dressing over salad and sprinkle remaining flaked salt on top.</p></li>
-    </ol>
+    <div id = 'card'>
+        <div id = 'content'>
+            <img src="https://www.allrecipes.com/thmb/fCT4ZRhOaR-7ef8gAXTEM2cnNsk=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/4531443-011ac1b2556f4224b25de664c458ca08.jpg" alt="Peach and Tomato Caprese Salad">
+            <h1>Peach and Tomato Caprese Salad</h1>
+            <h2>Description :</h2>
+            <p>This peach caprese salad with heirloom tomatoes and fresh mozzarella is topped with a simple balsamic vinaigrette for a fantastic summer appetizer.</p>
+            <h2>Ingredients</h2>
+            <ul>
+                <li>2 tablespoons extra-virgin olive oil</li>
+                <li>1 tablespoon balsamic vinegar</li>
+                <li>1 teaspoon flaked salt, divided</li>
+                <li>2 large heirloom tomatoes, thinly sliced</li>
+                <li>2 ripe peaches - halved, pitted, and sliced into half moons</li>
+                <li>1 (8 ounce) ball fresh mozzarella, thinly sliced</li>
+                <li>6 leaves fresh basil</li>
+            </ul>
+            <br>
+            <br>
+            <h2>Steps:</h2>
+            <ol>
+                <li>Step 1 :<p>Whisk olive oil, balsamic vinegar, and 1 pinch flaked salt together in a bowl until dressing is smooth.</p></li>
+                <li>Step 2 :<p>Alternate tomato slices, peach slices, mozzarella slices, and basil leaves in layers on a platter. Drizzle dressing over salad and sprinkle remaining flaked salt on top.</p></li>
+            </ol>
+        </div>
+    </div>
+
 </body>
 </html>
