Styling recepies pages

--- a/recipes/CapreseSalad.html
+++ b/recipes/CapreseSalad.html
@@ -9,27 +9,62 @@
 <body>
     <div id = 'card'>
         <div id = 'content'>
+            <div id='pic'>
             <img src="https://www.allrecipes.com/thmb/fCT4ZRhOaR-7ef8gAXTEM2cnNsk=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/4531443-011ac1b2556f4224b25de664c458ca08.jpg" alt="Peach and Tomato Caprese Salad">
-            <h1>Peach and Tomato Caprese Salad</h1>
-            <h2>Description :</h2>
-            <p>This peach caprese salad with heirloom tomatoes and fresh mozzarella is topped with a simple balsamic vinaigrette for a fantastic summer appetizer.</p>
-            <h2>Ingredients</h2>
-            <ul>
-                <li>2 tablespoons extra-virgin olive oil</li>
-                <li>1 tablespoon balsamic vinegar</li>
-                <li>1 teaspoon flaked salt, divided</li>
-                <li>2 large heirloom tomatoes, thinly sliced</li>
-                <li>2 ripe peaches - halved, pitted, and sliced into half moons</li>
-                <li>1 (8 ounce) ball fresh mozzarella, thinly sliced</li>
-                <li>6 leaves fresh basil</li>
-            </ul>
-            <br>
-            <br>
-            <h2>Steps:</h2>
-            <ol>
-                <li>Step 1 :<p>Whisk olive oil, balsamic vinegar, and 1 pinch flaked salt together in a bowl until dressing is smooth.</p></li>
-                <li>Step 2 :<p>Alternate tomato slices, peach slices, mozzarella slices, and basil leaves in layers on a platter. Drizzle dressing over salad and sprinkle remaining flaked salt on top.</p></li>
-            </ol>
+
+            </div>
+            <!-- <img src="https://www.allrecipes.com/thmb/fCT4ZRhOaR-7ef8gAXTEM2cnNsk=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/4531443-011ac1b2556f4224b25de664c458ca08.jpg" alt="Peach and Tomato Caprese Salad"> -->
+            <div id = 'title'>
+             <h1>Peach and Tomato Caprese Salad</h1>
+
+            </div>
+            <!-- <h1>Peach and Tomato Caprese Salad</h1> -->
+           
+            <div id = 'description'>
+                <p>This peach caprese salad with heirloom tomatoes and fresh mozzarella is topped with a simple balsamic vinaigrette for a fantastic summer appetizer.</p>
+
+            </div>
+
+            <div id = 'preparationTime'>
+                <h2>Preparation time</h2>
+                <ul>
+                    <li>Total: <span>Aproximatelly 10 minutes</span></li>
+                    <li>Preparation: <span>8 minutes</span></li>
+                    <li>Cooking: <span>2 minutes</span></li>
+                </ul>
+          
+            </div>
+
+            <div id = 'ingredients'>
+                <h2>Ingredients</h2>
+                <ul>
+                    <li>2 tablespoons extra-virgin olive oil</li>
+                    <li>1 tablespoon balsamic vinegar</li>
+                    <li>1 teaspoon flaked salt, divided</li>
+                    <li>2 large heirloom tomatoes, thinly sliced</li>
+                    <li>2 ripe peaches - halved, pitted, and sliced into half moons</li>
+                    <li>1 (8 ounce) ball fresh mozzarella, thinly sliced</li>
+                    <li>6 leaves fresh basil</li>
+                </ul>
+            </div>
+
+            <div id = 'instruction'>
+                <h2>Instructions</h2>
+                <ol>
+                    <li><span>Whisk olive oil, balsamic vinegar, and 1 pinch flaked salt together in a bowl until dressing is smooth.</span></li>
+                    <li><span>Alternate tomato slices, peach slices, mozzarella slices, and basil leaves in layers on a platter. Drizzle dressing over salad and sprinkle remaining flaked salt on top.</span></li>
+                </ol>
+            </div>
+
+            <div id = 'nutrition'>
+                <h2>Nutrition</h2>
+                <p>The table below shows nutritional values per serving without the additional fillings.</p>
+                <p>Calories <span>345 kcal</span></p>
+                <p>Carbs <span>15g</span></p>
+                <p>Protein <span>38g</span></p>
+                <p>Fat <span>5g</span></p>
+
+            </div>
         </div>
     </div>
 
