Add cover styling for recepies

--- a/index.html
+++ b/index.html
@@ -7,21 +7,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- <h1>Odin Recipes</h1> -->
     <main class="parent">
-        <h1>Odin Recipes</h1>
-        <div class="child group1">
-          <div class="grand-child group1">
-            <a href="recipes/grilledCorn.html">Grilled Corn with Cilantro Lime Butter</a>
+        <h1>Recipes</h1>
+
+        <div class="recipe">
+          <div class="firstRecipe">
+            <p class="re"><a class="re" href="recipes/grilledCorn.html">Grilled Corn with Cilantro Lime Butter</a></p>
           </div>
+          <p class="re"><a class="re" href="recipes/grilledCorn.html">Grilled Corn with Cilantro Lime Butter</a></p>
+
         </div>
-        <div class="child group2">
-          <div class="grand-child group2">
+
+        <div class="recipe">
+          <div class="secondRecipe">
             <a href="recipes/sangria.html">Sangria</a>
           </div>
         </div>
-        <div class="child group3">
-          <div class="grand-child group3">
+
+        <div class="recipe">
+          <div class="thirdRecipe">
             <a href="recipes/CapreseSalad.html">Peach and Tomato Caprese Salad</a>
           </div>
         </div>
