Add style for introductive  Recepies page

--- a/index.html
+++ b/index.html
@@ -12,23 +12,25 @@
 
         <div class="recipe">
           <div class="firstRecipe">
-            <p class="re"><a class="re" href="recipes/grilledCorn.html">Grilled Corn with Cilantro Lime Butter</a></p>
-          </div>
-          <p class="re"><a class="re" href="recipes/grilledCorn.html">Grilled Corn with Cilantro Lime Butter</a></p>
 
+            <a class="recipeTitle " href="recipes/grilledCorn.html">Grilled Corn with Cilantro Lime Butter</a>
+          </div>
         </div>
 
         <div class="recipe">
           <div class="secondRecipe">
-            <a href="recipes/sangria.html">Sangria</a>
+             <a class="recipeTitle " href="recipes/sangria.html">Sangria</a>
+
           </div>
         </div>
 
         <div class="recipe">
           <div class="thirdRecipe">
-            <a href="recipes/CapreseSalad.html">Peach and Tomato Caprese Salad</a>
+            <a class="recipeTitle " href="recipes/CapreseSalad.html">Peach and Tomato Caprese Salad</a>
+
           </div>
         </div>
+
     </main>
 </body>
 </html>
