--- a/index.html
+++ b/index.html
@@ -32,5 +32,10 @@
         </div>
 
     </main>
+    <footer>
+      <h4>Copyright © 2024 AdelinaMoroaca</h4>
+    </footer>
+
+ <script src="script.js"></script>
 </body>
 </html>
