Restructuring html sections

--- a/recipes/CapreseSalad.html
+++ b/recipes/CapreseSalad.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id = 'card'>
+    <section id = 'card'>
         <div id = 'content'>
             <div id='pic'>
             <img src="https://www.allrecipes.com/thmb/fCT4ZRhOaR-7ef8gAXTEM2cnNsk=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/4531443-011ac1b2556f4224b25de664c458ca08.jpg" alt="Peach and Tomato Caprese Salad">
@@ -97,7 +97,7 @@
 
             </div>
         </div>
-    </div>
+    </section>
 
 </body>
 </html>
