--- a/recipes/grilledCorn.html
+++ b/recipes/grilledCorn.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <div id = 'card'>
+    <section id = 'card'>
         <div id = 'content'>
             <div id='pic'>
               <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F1217931.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="Grilled-Corn">
@@ -102,7 +102,7 @@
             </div>
 
         </div>
-    </div>
+    </section>
 
 </body>
 </html>
