--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main class="parent">
+    <section class="parent">
         <h1>Recipes</h1>
 
         <div class="recipe">
@@ -31,7 +31,7 @@
           </div>
         </div>
 
-    </main>
+    </section>
     <footer>
       <h4>Copyright © 2024 AdelinaMoroaca</h4>
     </footer>
