--- a/recipes/sangria.html
+++ b/recipes/sangria.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id = 'card'>
+    <section id = 'card'>
         <div id = 'content'>
             <div id='pic'>
                  <img src="https://www.allrecipes.com/thmb/DNris9xYVUH_s4AUkPdxJL3udTU=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/72612-SangriaSangria-mfs-2X3-1483-b3b44735141c46ff889807f0968388ee.jpg" alt="Sangria">
@@ -96,6 +96,6 @@
             </div>
             
         </div>
-    </div>
+    </section>
 </body>
 </html>
